# stevia

./: .gitignore  .gitlab-ci.yml  NEWS  README.md  meson.build  phosh-osk-stevia.doap  run.in
.gitlab-ci/: run-docker.sh
data/: meson.build  mobi.phosh.OskStub.metainfo.xml.in  mobi.phosh.Stevia.metainfo.xml.in  mobi.phosh.osk.gschema.xml  sm.puri.OSK0.desktop.in.in  sm.puri.phosh.osk.gschema.xml
data/completers/: meson.build
debian/: changelog  control  copyright  phosh-osk-stevia.alternatives  phosh-osk-stevia.install  phosh-osk-stevia.manpages
debian/tests/: control
doc/: meson.build  phosh-osk-stevia.rst  phosh-osk-stevia.toml.in  phosh-osk-stub.rst  testing-layouts.md
examples/: pipe-completer-demo.sh
po/: LINGUAS  POTFILES.in  ar.po  de.po  fa.po  meson.build
protocol/: meson.build
src/: meson.build  phosh-osk-enums.h  phosh-osk-stevia.c  phosh-osk-stevia.gresources.xml  phosh-osk-stub.c  pos-char-popup.c  pos-completer-base.c  pos-completer-base.h  pos-completer-manager.c  pos-completer.c  pos-completion-bar.c  pos-completion-bar.h  pos-completions-box.c  pos-completions-box.h  pos-emoji-db.c  pos-emoji-db.h  pos-emoji-picker.c  pos-indicator-popup.c  pos-indicator-popup.h  pos-input-surface.c  pos-keypad-button.c  pos-keypad.c  pos-osk-key.c  pos-osk-key.h  pos-osk-widget.c  pos-osk-widget.h  pos-output-priv.h  pos-output.c  pos-output.h  pos-shortcuts-bar.c  pos-size-manager.c  pos-size-manager.h  pos-style-manager.c  pos-vk-driver.c  pos-wayland.c  pos-wayland.h  pos.h
src/completers/: meson.build  pos-completer-hunspell.c  pos-completer-hunspell.h  pos-completer-pipe.c  pos-completer-presage.c  pos-completer-presage.h
src/dbus/: meson.build
src/layouts/: meson.build  us+dvorak.json
src/stylesheet/: adwaita-dark.css  adwaita-hc-light.css  common.css
src/ui/: char-popup.ui  completion-bar.ui  debug-widget.ui  emoji-picker.ui  indicator-popup.ui  input-surface.ui  keypad-button.ui  keypad.ui  shortcuts-bar.ui
tests/: meson.build  mk-presage-db  pos-test-completer.h  test-capitalize-by-template.c  test-completer-hunspell.c  test-completer-presage.c  test-completers.c  test-emoji-db.c  test-grab-word.c  test-load-layouts.c  test-osk-widget.c  test-size-manager.c
tools/: screenshot-all-layouts.py
